add french translation + fix 1 english line

--- a/Mods/OrderOfTheMutantBloodHunter_e9850071-5e84-dc8a-9168-3bb6b148aa77/Localization/English/english.xml
+++ b/Mods/OrderOfTheMutantBloodHunter_e9850071-5e84-dc8a-9168-3bb6b148aa77/Localization/English/english.xml
@@ -235,7 +235,7 @@
   <content contentuid="h6f8135abg4c44ga641g02c9g60c723963423" version="1">Potency Mutagen</content>
   <content contentuid="h8d57015cg3ad3g53f5g6dccg80fae63e12ba" version="1">You have disadvantage on Dexterity saving throws.</content>
   <content contentuid="hbe3d87a3g630dgf7c4g2a31g6d329fa75965" version="1">Adrenaline Burst</content>
-  <content contentuid="he7701ee4g35b9g66a6g1939g3f42993a7ed2" version="1">You temporarily resist the negative effects of a mutagens.</content>
+  <content contentuid="he7701ee4g35b9g66a6g1939g3f42993a7ed2" version="1">You temporarily resist the negative effects of mutagens.</content>
   <content contentuid="ha4d0573eg9cccg032cge3fag97972b436f49" version="1">You temporarily resist the negative effects of mutagens.</content>
   <content contentuid="hd164ed0cg9e73g5f3cg5af6gb3e73275f2f7" version="2">Adrenaline Burst</content>
   <content contentuid="h1017e7f9gcfd1g4682g4150g29108e6ae3b1" version="2">You can trigger a burst of adrenaline that lets you temporarily resist the negative effects of mutagens. As a bonus action, you can ignore the negative side effect of mutagens affecting you for some time. Once you do so, you can’t do so again until you finish a long rest.</content>
