--- a/Mods/OrderOfTheMutantBloodHunter_e9850071-5e84-dc8a-9168-3bb6b148aa77/Localization/Russian/russian.xml
+++ b/Mods/OrderOfTheMutantBloodHunter_e9850071-5e84-dc8a-9168-3bb6b148aa77/Localization/Russian/russian.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0"?>
+<!-- Russian translation by justxrx -->
 <contentList xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <content contentuid="hf0d1f2dfgd977g1297gceebg1b07aab0dceb" version="1">Орден мутантов</content>
   <content contentuid="h4e81236cg1ce4gcaceg366cg4b9226b3bc1f" version="1">За многие поколения экспериментов отколовшийся орден охотников за кровью отточил способ, с помощью которого гемокрафт изменяет организм, используя испорченную алхимию и токсичные эликсиры, чтобы еще больше изменить свою кровь. Называя себя Орденом Мутантов, эти кровавые охотники теперь специализируются на оценке сильных и слабых сторон своих врагов, изменяя их биологию, чтобы быть наилучшим образом подготовленными к любому сражению.</content>
