--- a/Mods/OrderOfTheMutantBloodHunter_e9850071-5e84-dc8a-9168-3bb6b148aa77/Localization/French/french.xml
+++ b/Mods/OrderOfTheMutantBloodHunter_e9850071-5e84-dc8a-9168-3bb6b148aa77/Localization/French/french.xml
@@ -252,7 +252,8 @@
   <content contentuid="h73996d2ag0067gf126g3405gd8efe4283b30" version="1">Marque d'Axiom</content>
   <content contentuid="h561975b0gb3fega445g111cgc523d1fc3d29" version="1">Une version augmentée de Marque de Castigation. La créature marquée ne peux pas bénéficier des effets d'invisibilités et d'illusions.</content>
   <content contentuid="heefe80efg5ae9gd8acg6257gfa159b4f9f0e" version="1">Malédiction du sang de corrosion</content>
-  <content contentuid="h2d41604eg794eg2c9fgc975g0d367705fefb" version="1">Cette malédiction du sang infuse le corps de votre cible avec une toxine nécrotique. La créature subit l'état &lt;LSTag Type="Status" Tooltip="POISONED"&gt;empoisonné&lt;/LSTag&gt;.</content>
   <content contentuid="h7d1ccf26g7d69gff90ge59fgbacd60b66089" version="1">Malédiction du sang de corrosion</content>
+  <content contentuid="hd95f5a5dgb7b5g98dcg8d6cg8950095d5d09" version="1">Malédiction du sang de corrosion (Amplifié)</content>
+  <content contentuid="h2d41604eg794eg2c9fgc975g0d367705fefb" version="1">Cette malédiction du sang infuse le corps de votre cible avec une toxine nécrotique. La créature subit l'état &lt;LSTag Type="Status" Tooltip="POISONED"&gt;empoisonné&lt;/LSTag&gt;. Il est possible de &lt;LSTag Type="Passive" Tooltip="PassiveAmplify_Tooltip"&gt;l'amplifier&lt;/LSTag&gt;.</content>
   <content contentuid="hc1865feaga4f4gfbd3g895dg81c5a26e8d18" version="2">Infecté par une &lt;LSTag Type="Status" Tooltip="POISONED"&gt;toxine&lt;/LSTag&gt; nécrotique.</content>
 </contentList>
